--- a/tv/playus.html
+++ b/tv/playus.html
@@ -73,10 +73,8 @@
     {"title":"COMET","file":"https://fl3.moveonjoy.com/COMET/index.m3u8"},
 	{"title":"Court TV","file":"https://fl3.moveonjoy.com/COURT_TV/index.m3u8"},	
 	{"title":"Cozi TV","file":"https://fl3.moveonjoy.com/COZI_TV/index.m3u8"},
-	{"title":"Crave 1","file":"https://fl3.moveonjoy.com/CRAVE_1/index.m3u8"},
-    {"title":"Crave 2","file":"https://fl3.moveonjoy.com/CRAVE_2/index.m3u8"},
-    {"title":"Crave 3","file":"https://fl3.moveonjoy.com/CRAVE_3/index.m3u8"},
-    {"title":"Crave 4","file":"https://fl3.moveonjoy.com/CRAVE_4/index.m3u8"},
+    {"title":"Crave I","file":"https://fl3.moveonjoy.com/CRAVE_2/index.m3u8"},
+    {"title":"Crave II","file":"https://fl3.moveonjoy.com/CRAVE_4/index.m3u8"},
 	{"title":"Curiosity Stream","file":"https://fl3.moveonjoy.com/Curiosity_Stream/index.m3u8"},
     {"title":"Disney Channel","file":"https://fl5.moveonjoy.com/DISNEY/index.m3u8"},
     {"title":"Disney Junior","file":"https://fl3.moveonjoy.com/DISNEY_JR/index.m3u8"},
@@ -117,15 +115,13 @@
 	{"title":"MAV TV","file":"https://fl3.moveonjoy.com/MAV_TV/index.m3u8"},
 	{"title":"MGM+ ","file":"https://fl3.moveonjoy.com/EPIX/index.m3u8"},
     {"title":"MGM+ Marquee","file":"https://fl3.moveonjoy.com/EPIX_DRIVE_IN/index.m3u8"},
-    {"title":"MLB Network","file":"https://fl3.moveonjoy.com/MLB_NETWORK/index.m3u8"},
-	{"title":"MOREMAX","file":"https://fl3.moveonjoy.com/CINEMAX_MOREMAX/index.m3u8"},	
+    {"title":"MLB Network","file":"https://fl3.moveonjoy.com/MLB_NETWORK/index.m3u8"},	
     {"title":"MSG","file":"https://fl3.moveonjoy.com/MSG/index.m3u8"},
 	{"title":"MTV2","file":"https://fl5.moveonjoy.com/MTV_2/index.m3u8"},	
 	{"title":"MTV Classic","file":"https://fl3.moveonjoy.com/MTV_CLASSIC/index.m3u8"},
 	{"title":"MTV","file":"https://fl3.moveonjoy.com/MTV/index.m3u8"},
     {"title":"MTV Live","file":"https://fl5.moveonjoy.com/MTV_LIVE/index.m3u8"},
     {"title":"MTVU","file":"https://fl3.moveonjoy.com/MTV_U/index.m3u8"},
-    {"title":"Much","file":"https://fl1.moveonjoy.com/MUCH/index.m3u8"},
 	{"title":"National Geographic","file":"https://fl3.moveonjoy.com/National_Geographic/index.m3u8"},	
 	{"title":"National Geographic Wild","file":"https://fl3.moveonjoy.com/Nat_Geo_Wild/index.m3u8"},
 	{"title":"NBA TV","file":"https://fl3.moveonjoy.com/NBA_TV/index.m3u8"},
@@ -136,8 +132,7 @@
 	{"title":"NHL Network","file":"https://fl3.moveonjoy.com/NHL_NETWORK/index.m3u8"},	
 	{"title":"Nick Jr.","file":"https://fl5.moveonjoy.com/NICK_JR/index.m3u8"},
 	{"title":"Nick Music","file":"https://fl3.moveonjoy.com/NICK_MUSIC/index.m3u8"},
-    {"title":"Nicktoons","file":"https://fl1.moveonjoy.com/NICKTOONS/index.m3u8"},
-	{"title":"OANN One America News","file":"https://oan-plus-tcl.amagi.tv/playlist.m3u8 or https://oneamericanews-vizio.amagi.tv/playlist.m3u8 or https://cdn.herringnetwork.com/80A4DFF/oane_oregon/OAN_Encore.m3u8"},	
+    {"title":"Nicktoons","file":"https://fl1.moveonjoy.com/NICKTOONS/index.m3u8"},	
     {"title":"Outdoor Channel","file":"https://fl3.moveonjoy.com/OUTDOOR_CHANNEL/index.m3u8"},
     {"title":"OuterMax","file":"https://fl3.moveonjoy.com/OUTER_MAX/index.m3u8"},
 	{"title":"Outside TV","file":"https://fl3.moveonjoy.com/OUTSIDE_TV/index.m3u8"},
@@ -148,7 +143,6 @@
 	{"title":"QVC","file":"https://fl3.moveonjoy.com/QVC/index.m3u8"},
 	{"title":"Reelz","file":"https://fl3.moveonjoy.com/REELZ/index.m3u8"},
     {"title":"Revolt","file":"https://fl3.moveonjoy.com/REVOLT/index.m3u8"},
-	{"title":"RSBN Live","file":"https://1a-1791.com/live/r8wvl35k/slot-156/vd1p-32lq_1080p/chunklist_DVR.m3u8"},
 	{"title":"RT News","file":"https://rt-glb.rttv.com/dvr/rtnews/playlist_2500Kb.m3u8"},	
     {"title":"Showtime 2","file":"https://fl3.moveonjoy.com/SHOWTIME_2/index.m3u8"},
     {"title":"Showtime","file":"https://fl3.moveonjoy.com/SHOWTIME/index.m3u8"},
@@ -172,7 +166,6 @@
     {"title":"TSN3","file":"https://fl5.moveonjoy.com/TSN_3/index.m3u8"},
     {"title":"TSN4","file":"https://fl5.moveonjoy.com/TSN_4/index.m3u8"},
     {"title":"TSN5","file":"https://fl5.moveonjoy.com/TSN_5/index.m3u8"},		
-    {"title":"TV Land","file":"https://fl3.moveonjoy.com/TV_Land/index.m3u8"},
     {"title":"TV One","file":"https://fl3.moveonjoy.com/TV_ONE/index.m3u8"},
     {"title":"Up TV","file":"https://fl3.moveonjoy.com/Up_Tv/index.m3u8"},
     {"title":"VH1","file":"https://fl3.moveonjoy.com/VH1/index.m3u8"},
