--- a/tv/serialiru.html
+++ b/tv/serialiru.html
@@ -254,11 +254,16 @@ display: block;
 <a target="github" href="//ok.ru/videoembed/9063000514207?nochat=1&autoplay=1">'RED Scarf' 2025</a>	
 </div>
 	</div></center></div>
-	<div class="ac">
-<div style="position: relative;padding-bottom: 56.25%; padding-top: 0px; height: 0;">
-	<iframe src="https://reallylockedin.xyz/embed/68614c2658100867c3b7a038" frameborder="0" allowfullscreen="1" allow="autoplay; encrypted-media; picture-in-picture"></iframe></div></div>
+<div class="ac">
+<div style="position: relative;padding-bottom: 56.25%; padding-top: 0px; height: 0;"><iframe name="github" style="position: absolute;top: 0;left: 0;width: 100%;height: 100%;" src="/tv/play.html" scrolling="yes" allow="autoplay" frameborder="0" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen="1"></iframe></div>
+	<div class="ac"><font size="2" color="#CCCCCC" face="verdana">&nbsp;Play | смотрим твзов <a href="//ok.ru/videoembed/6959664209567?nochat=1" target="_blank" onClick="window.open('//ok.ru/videoembed/6959664209567?nochat=1','playindex','resizable,width=480,height=208'); return false;"><font size="2" color="#ffee10" face="verdana">ЭФИР</font>&nbsp;<img src="/telezov_files/tvzov.png" width="12px" height="12px" alt="www.tvzov.com"></a><a target="github" href="/tv/play.html" title="твPlay"><span style=""> &#x25c0;</span> тvPlay</a>&nbsp;<a target="github" href="/tv/seriali.html" title="Seriali"><span style="color:#ffee10"> &#x25c0;</span> сериалы</a><a rel="nofollow noopener" href="/tv/proga.html" onclick="window.open(this.href, 'proga', 'left=200,top=200,width=680,height=380,toolbar=1,resizable=0'); return false;" title="Proga"><span style="color:#00A939">&#8471;</span> </a><a rel="nofollow noopener" href="https://ok.ru/video/c14395295" onclick="window.open(this.href, 'frame', 'left=200,top=200,width=680,height=380,toolbar=1,resizable=0'); return false;" title="OK"><span style="color:#ffee10">&#9993;</span></a></font></div></div>
 	
-<div id="channels" class="content"><ul><li><a target="github" href="//ok.ru/videoembed/8539382226591?nochat=1&autoplay=1" title="Прометей: Детектив, триллер, фантастика
+<div id="channels" class="content"><ul><li><a target="github" href="https://reallylockedin.xyz/embed/68614c2658100867c3b7a038" title="Фишер 2: 
+Жанр: Детектив, драма, криминал, триллер
+Режиссер: Сергей Тарамаев, Любовь Львова, Александр Цой
+В ролях: Иван Янковский, Александр Яценко, Ирина Старшенбаум, Андрей Максимов (III), Никита Худяков, Александра Ребенок..
+О фильме:
+События второго сезона развиваются после того, как жестокого маньяка Фишера посадили в тюрьму. В курортном городе на юге России пропадает ребенок, и его мать передает записку Евгению Бокову, в которой просит помочь следствию. Вскоре выясняется, что киднеппинг — это еще не все: в городе орудует маньяк-психопат, который изощренно убивает молодых девушек. Почерк преступника вызывает особый интерес."><img src="https://i6.imageban.ru/out/2025/05/29/b6a616a293f8f3843659f1767d9267e8.jpg" alt="Фишер 2">Фишер 2</a></li><li><a target="github" href="//ok.ru/videoembed/8539382226591?nochat=1&autoplay=1" title="Прометей: Детектив, триллер, фантастика
 Режиссер: Максим Свешников
 В ролях: Филипп Янковский, Любовь Аксёнова, Дмитрий Чеботарёв, Александр Алябьев..
 О сериале: Бывший сотрудник спецслужб Шапошников занимается расследованием дела об исчезновении в 1998 году пассажирского самолета. Прошлое находит отголоски в настоящем, когда своей семье дозванивается один из пассажиров исчезнувшего рейса. К делу подключают журналистку Анну, привыкшую замечать детали, которые упускают другие. Решить загадку ей помогут преподаватель физики Вадим и оператор-технарь Никита."><img src="https://i124.fastpic.org/big/2024/1204/0f/17532a05a4cb3c7d3b5187167f40500f.jpg" alt="Прометей">Прометей</a></li><li><a target="github" href="//ok.ru/videoembed/8960365890207?nochat=1&autoplay=1" title="Андор 2022-2025: Фантастика, боевик, триллер, приключения
