--- a/tv/serialiru.html
+++ b/tv/serialiru.html
@@ -250,11 +250,8 @@ display: block;
 <a target="github" href="//ok.ru/videoembed/6693677501087?nochat=1&autoplay=1">'Душегубы' сериал 2022</a>
 <a target="github" href="//ok.ru/videoembed/6006396684959?nochat=1&autoplay=1">'Чужой' сериал 2023</a>
 <a target="github" href="//ok.ru/videoembed/8732008057503?nochat=1&autoplay=1">'Казанова. В бегах' 2025</a>
-<a target="github" href="//ok.ru/videoembed/8733937966751?nochat=1&autoplay=1">'Круги на воде' 2025</a>
-<a target="github" href="https://vod.plvideo.ru/xdhKhqAx/EiKYJIFOyO/zE2SWKSitlPaLVDOhBU/ZX?nochat=1&autoplay=1">'RED 1' 2025</a>	
-	<a target="github" href="https://reallylockedin.xyz/embed/68614c2658100867c3b7a038?nochat=1&autoplay=1">'RED 2' 2025</a>
-	<a target="github" href="http://ypbmbfwd.mexamo.xyz:80/movie/6865539730/3350673452/400172639.mkv?nochat=1&autoplay=1">'RED 3' 2025</a>	
-	<a target="github" href="https://svd5.vidme.link/video_mp4/serials/The100/3dbd73855fed8e917ccdf021f02a8697/s01e01_LostFilm_720.mp4?nochat=1&autoplay=1">'RED 4 Sotnya' 2025</a>
+<a target="github" href="//ok.ru/videoembed/8733937966751?nochat=1&autoplay=1">'Круги на воде' 2025</a>	
+	<a target="github" href="https://svd5.vidme.link/video_mp4/serials/The100/3dbd73855fed8e917ccdf021f02a8697/s01e01_LostFilm_720.mp4">'RED 4 Sotnya' 2025</a>
 <a target="github" href="//ok.ru/videoembed/9063000514207?nochat=1&autoplay=1">'RED Scarf' 2025</a>	
 </div>
 	</div></center></div>
