--- a/tv/serialiru.html
+++ b/tv/serialiru.html
@@ -208,6 +208,7 @@ display: block;
 	<a target="github" href="//ok.ru/videoembed/6979905330847?nochat=1&autoplay=1">'Мосга́з. Дело № 4-5'</a>
 	<a target="github" href="//ok.ru/videoembed/6967380614815?nochat=1&autoplay=1">'Мосга́з. Дело № 3-4'</a>
 	<a target="github" href="//ok.ru/videoembed/6484542758559?nochat=1&autoplay=1">'Мосга́з. Дело № 2:Палач'</a>
+	<a target="github" href="https://reallylockedin.xyz/embed/6862e2222f5c8cd8dc44152e?nochat=1&autoplay=1">'Мосга́з. Дело № 1:Мосга́з'</a>
 	<a target="github" href="//ok.ru/videoembed/6421931826847?autoplay=1">'СМЕРШ 1-2' сезон</a>
 	<a target="github" href="//ok.ru/videoembed/6730325696159?nochat=1&autoplay=1">'СМЕРШ Карпаты' сериал</a>
 	<a target="github" href="//ok.ru/videoembed/8902927851167?nochat=1&autoplay=1">'СМЕРШ Карпаты 2' сериал</a>
@@ -412,7 +413,11 @@ display: block;
 Жанр: детектив, драма, криминал
 Режиссер: Скотт Фрэнк, Элиза Аморузо
 В ролях: Мэттью Гуд, Алексей Манвелов, Хлоя Пирри, Леа Бирн, Кейт Дики, Джейми Сивес, Стивен Миллер, Том Булпетт..
-О сериале: Эдинбург, Шотландия. После ранения старший инспектор Карл Морк проходит курс реабилитации, принимает лекарства и посещает психотерапевта. Начальница Мойра предлагает ему возглавить отдел по расследованию старых нераскрытых дел. Причём, Карл может сам выбирать дела для расследования."><img src="https://i8.imageban.ru/out/2025/06/03/255f20edf1b5e1f8c4249d2d999de5f3.jpg" alt="Dept. Q">Dept. Q</a></li><li><a target="github" href="https://ok.ru/videoembed/9006236966559?nochat=1&autoplay=1" title="Чужие деньги 2025
+О сериале: Эдинбург, Шотландия. После ранения старший инспектор Карл Морк проходит курс реабилитации, принимает лекарства и посещает психотерапевта. Начальница Мойра предлагает ему возглавить отдел по расследованию старых нераскрытых дел. Причём, Карл может сам выбирать дела для расследования."><img src="https://i8.imageban.ru/out/2025/06/03/255f20edf1b5e1f8c4249d2d999de5f3.jpg" alt="Dept. Q">Dept. Q</a></li><li><a target="github" href="https://reallylockedin.xyz/embed/6862f2a42f5c8cd8dc449042?nochat=1&autoplay=1" title="Таганрог 2025
+Жанр: Драма, военный, история
+Режиссер: Арменак Назикян
+В ролях: Денис Донской, Сергей Жарков, Кирилл Балобан, Юрий Батурин, Ольга Павловец, Кирилл Полухин, Алексей Красноцветов, Дарья Кукарских, Семён Стругачёв, Данила Якушев, Вячеслав Аркунов, Елизавета Ковалёва..
+О сериале: 1941 год. Офицер госбезопасности Виктор Швец получает задание отправиться в Таганрог для организации и ведения разведывательной и подпольной деятельности. Ради выполнения миссии он устраивается в органы оккупационной власти нацистов под видом поволжского немца Густава Шварца. Благодаря Виктору одна ячейка движения подполья вскоре вырастает до сотен человек. Соблюдая тщательную конспирацию, они совершают диверсии, распространяют листовки, спасают советских военнопленных и готовят вооруженное восстание под руководством Василия Афонова. Понимая, что в городе работает мощное подполье, гестапо и тайная полиция всеми силами стремятся разоблачить его участников. Им удаётся захватить нескольких подпольщиков, и, подвергнув их жестоким пыткам, нацисты казнят молодых людей. Однако, вопреки их ожиданиям, сопротивление таганрожцев только нарастает."><img src="https://i125.fastpic.org/big/2025/0503/39/91035eee87561daf336e7b11fbb29a39.jpg" alt="Таганрог">Таганрог</a></li><li><a target="github" href="https://ok.ru/videoembed/9006236966559?nochat=1&autoplay=1" title="Чужие деньги 2025
 Жанр: Криминал, драма
 Режиссер: Игорь Твердохлебов
 В ролях: Максим Матвеев, Филипп Янковский, Стася Милославская, Гоша Куценко, Линда Лапиньш, Алла Сигалова, Александр Мизёв..
