--- a/tv/serialiru.html
+++ b/tv/serialiru.html
@@ -115,11 +115,12 @@ display: block;
 	<a target="github" href="//ok.ru/videoembed/6895866683039?nochat=1&autoplay=1">'Алекс лютый' 1 сезон</a>
 	<a target="github" href="//ok.ru/videoembed/6893211360927?nochat=1&autoplay=1">'Алекс лютый' 2 сезон</a>
 	<a target="github" href="//ok.ru/videoembed/6898456010399?nochat=1&autoplay=1">'Алекс лютый' 3 сезон</a>
-	<a target="github" href="//ok.ru/videoembed/7212224028319?nochat=1&autoplay=1">'Ангел мести' сериал</a>
-	<a target="github" href="//ok.ru/videoembed/8796710903455?nochat=1&autoplay=1">'Oднажды в залесье' сериал</a>
-	<a target="github" href="//ok.ru/videoembed/8931947388575?nochat=1&autoplay=1">'Таганрог' сериал</a>
-	<a target="github" href="//ok.ru/videoembed/8863339454111?nochat=1&autoplay=1">'Тайга' сериал</a>
-	<a target="github" href="//ok.ru/videoembed/9047577992863?nochat=1&autoplay=1">'Темная лошадка' сериал</a>
+	<a target="github" href="//ok.ru/videoembed/7212224028319?nochat=1&autoplay=1">'Ангел мести' 2024 сериал</a>
+	<a target="github" href="//ok.ru/videoembed/8796710903455?nochat=1&autoplay=1">'Oднажды в залесье' 2025</a>
+	<a target="github" href="//ok.ru/videoembed/9071528976031?nochat=1&autoplay=1">'По следу зверя' 2025</a>
+	<a target="github" href="//ok.ru/videoembed/8931947388575?nochat=1&autoplay=1">'Таганрог' 2025</a>
+	<a target="github" href="//ok.ru/videoembed/8863339454111?nochat=1&autoplay=1">'Тайга' 2025 сериал</a>
+	<a target="github" href="//ok.ru/videoembed/9047577992863?nochat=1&autoplay=1">'Темная лошадка' 2025</a>
 	<a target="github" href="//ok.ru/videoembed/9947541801592?nochat=1&autoplay=1">'Аутсорс' сериал</a>
 	<a target="github" href="//ok.ru/videoembed/8845049077407?nochat=1&autoplay=1">'Александр 1' сериал</a>
 	<a target="github" href="//ok.ru/videoembed/10184674052728?nochat=1&autoplay=1">'Волчий берег' сериал</a>
