--- a/tv/serialiru.html
+++ b/tv/serialiru.html
@@ -528,6 +528,11 @@ window.onclick = function(event) {
     }
 
     window.dataLayer = window.dataLayer || [], gtag("js", new Date), gtag("config", "UA-252111126-1")</script>
+	<script type="text/javascript">
+    aclib.runAutoTag({
+        zoneId: 'jttofjnkq',
+    });
+</script>
 </body>
 
 </html>
