--- a/tv/serialiru.html
+++ b/tv/serialiru.html
@@ -171,7 +171,7 @@ display: block;
 	<a target="github" href="//ok.ru/videoembed/7985065429663?nochat=1&autoplay=1">'сериал Хиромант'</a>
 	<a target="github" href="//ok.ru/videoembed/7023915240095?nochat=1&autoplay=1">'Чисые руки' 1 сезон</a>
 	<a target="github" href="//ok.ru/videoembed/6828701715103?nochat=1&autoplay=1">'Дельфин' 3 сезон</a>
-	<a target="github" href="//ok.ru/video/10249845148280?nochat=1&autoplay=1">'Русалки' сериал</a>
+	<a target="github" href="//ok.ru/videoembed/10254131333752?nochat=1&autoplay=1">'Русалки' сериал</a>
 	<a target="github" href="//ok.ru/videoembed/6767211650719?nochat=1&autoplay=1">'Я знаю кто тебя убил' сериал</a>
 	<a target="github" href="//ok.ru/videoembed/6496542198431?nochat=1&autoplay=1">'Страх над Невой' сериал</a>
 	<a target="github" href="//ok.ru/videoembed/6435090144927?nochat=1&autoplay=1">'Невский' сезоны</a>
