--- a/tv/serialiru.html
+++ b/tv/serialiru.html
@@ -146,7 +146,7 @@ display: block;
 	<a target="github" href="//ok.ru/videoembed/8539382226591?nochat=1&autoplay=1">'Прометей' сериал</a>
 	<a target="github" href="//ok.ru/videoembed/8531684368031?nochat=1&autoplay=1">'Дети перемен' сериал</a>
 	<a target="github" href="//ok.ru/videoembed/8171596488351?nochat=1&autoplay=1">'Преступление' сериал</a>
-	<a target="github" href="//ok.ru/video/9083720965791?nochat=1&autoplay=1">'Казанова +' 2 сезонa</a>
+	<a target="github" href="//ok.ru/videoembed/9083720965791?nochat=1&autoplay=1">'Казанова +' 2 сезонa</a>
 	<a target="github" href="//ok.ru/videoembed/9006236966559?nochat=1&autoplay=1">'Чужие деньги' 1 сезон</a>
 	<a target="github" href="//ok.ru/videoembed/8479122333343?nochat=1&autoplay=1">'Лихие' сериал</a>
 	<a target="github" href="//ok.ru/videoembed/9060169555615?nochat=1&autoplay=1">'Загляни ему в голову'</a>
@@ -252,7 +252,6 @@ display: block;
 <a target="github" href="//ok.ru/videoembed/5434203638431?autoplay=1">'Территория - Фишер'</a>
 <a target="github" href="//ok.ru/videoembed/6693677501087?nochat=1&autoplay=1">'Душегубы' сериал 2022</a>
 <a target="github" href="//ok.ru/videoembed/6006396684959?nochat=1&autoplay=1">'Чужой' сериал 2023</a>
-<a target="github" href="https://reallylockedin.xyz/embed/6867e875ed88229b816e3611?nochat=1&autoplay=1">'Казанова 2 сезона' 2025</a>
 <a target="github" href="//ok.ru/videoembed/8733937966751?nochat=1&autoplay=1">'Круги на воде' 2025</a>
 <a target="github" href="//ok.ru/videoembed/9063000514207?nochat=1&autoplay=1">'RED Scarf' 2025</a>
 <a target="github" href="https://reallylockedin.xyz/embed/68680cb2ed88229b817301c0?nochat=1&autoplay=1">'The Final Reckoning' 2025</a>
@@ -260,7 +259,7 @@ display: block;
 	</div></center></div>
 <div class="ac">
 <div style="position: relative;padding-bottom: 56.25%; padding-top: 0px; height: 0;"><iframe name="github" style="position: absolute;top: 0;left: 0;width: 100%;height: 100%;" src="https://reallylockedin.xyz/embed/6862ac752f5c8cd8dc417c05" frameborder="0" allowfullscreen="1" allow="autoplay; encrypted-media; picture-in-picture"></iframe></div>
-	<div class="ac"><font size="2" color="#CCCCCC" face="verdana">&nbsp;Play | смотрим твзов <a href="//ok.ru/videoembed/6959664209567?nochat=1" target="_blank" onClick="window.open('//ok.ru/videoembed/6959664209567?nochat=1','playindex','resizable,width=480,height=208'); return false;"><font size="2" color="#ffee10" face="verdana">ЭФИР</font>&nbsp;<img src="/telezov_files/tvzov.png" width="12px" height="12px" alt="www.tvzov.com"></a><a target="github" href="/tv/play.html" title="твPlay"><span style=""> &#x25c0;</span> тvPlay</a>&nbsp;<a target="github" href="/tv/seriali.html" title="Seriali"><span style="color:#ffee10"> &#x25c0;</span> сериалы</a><a rel="nofollow noopener" href="/tv/proga.html" onclick="window.open(this.href, 'proga', 'left=200,top=200,width=680,height=380,toolbar=1,resizable=0'); return false;" title="Proga"><span style="color:#00A939">&#8471;</span> </a><a rel="nofollow noopener" href="https://ok.ru/video/c14395295" onclick="window.open(this.href, 'frame', 'left=200,top=200,width=680,height=380,toolbar=1,resizable=0'); return false;" title="OK"><span style="color:#ffee10">&#9993;</span></a></font></div></div>
+	<div class="ac"><font size="2" color="#CCCCCC" face="verdana">&nbsp;Play | смотрим твзов <a href="//ok.ru/videoembed/6959664209567?nochat=1" target="_blank" onClick="window.open('//ok.ru/videoembed/6959664209567?nochat=1','playindex','resizable,width=480,height=208'); return false;"><font size="2" color="#ffee10" face="verdana">ЭФИР</font>&nbsp;<img src="/telezov_files/tvzov.png" width="12px" height="12px" alt="www.tvzov.com"></a><a target="github" href="/tv/playru.html" title="твPlay"><span style=""> &#x25c0;</span> тvPlay</a>&nbsp;<a target="github" href="/tv/filmi.html" title="Filmi"><span style="color:#ffee10"> &#x25c0;</span> Фильмы скоро</a><a rel="nofollow noopener" href="/tv/proga.html" onclick="window.open(this.href, 'proga', 'left=200,top=200,width=680,height=380,toolbar=1,resizable=0'); return false;" title="Proga"><span style="color:#00A939">&#8471;</span> </a><a rel="nofollow noopener" href="https://ok.ru/video/c14395295" onclick="window.open(this.href, 'frame', 'left=200,top=200,width=680,height=380,toolbar=1,resizable=0'); return false;" title="OK"><span style="color:#ffee10">&#9993;</span></a></font></div></div>
 	
 <div id="channels" class="content"><ul><li><a target="github" href="https://reallylockedin.xyz/embed/6866cce4e98159f21391c088?nochat=1&autoplay=1" title="Фишер 2: 
 Жанр: Детектив, драма, криминал, триллер
