--- a/tv/playru.html
+++ b/tv/playru.html
@@ -59,6 +59,7 @@
 		{"title":"кинозов 16 канал","file":"https://fl1002.bozztv.com/ushba-rfilrms-z/tracks-v1a1/mono.ts.m3u8"},
 		{"title":"кинозов 17 канал","file":"https://glb.bozztv.com/glb/ushba-films-k/index.m3u8"},
 		{"title":"кинозов 18 канал","file":"https://glb.bozztv.com/glb/ushba-films-yz/index.m3u8"},
+		{"title":"кинозов 19 test","file":"https://cors-proxy.cooks.fyi/https://api.peers.tv/timeshift/sonyscifi/16/playlist.m3u8?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJhdWQiOiJhY2Nlc3MiLCJleHAiOjE3NTE3ODUyMzcsImlhdCI6MTc1MTY5ODgzNywiY2lkIjo2LCJ1aWQiOjkyODE2MDUyNywicmVnIjpmYWxzZSwiaXAiOjM2NDgxMzc5OTUsImFkdWx0IjpmYWxzZX0.eYxQvFMOso-cVRxHen1H3n0PPpjdCmn2MqLPg1607Qg&offset=10"},
 		{"title":"РТР киноканал","file":"https://live-vgtrksmotrim.cdnvideo.ru/vgtrksmotrim/smotrim-live-01.smil/playlist.m3u8"},
 		{"title":"Star Media 1","file":"https://fl1001.bozztv.com/ushba82/index.m3u8"},
 		{"title":"Star Media 2","file":"https://fl1001.bozztv.com/ushba4/index.m3u8"},
