--- a/tv/film.html
+++ b/tv/film.html
@@ -116,12 +116,13 @@ display: block;
 <a target="github" href="https://reallylockedin.xyz/embed/68699366ed88229b81a55996?nochat=1&autoplay=1">'Ainsley McGregor Mysteries'</a>
 <a target="github" href="https://reallylockedin.xyz/embed/68698995ed88229b81a3da1d?nochat=1&autoplay=1">'Pie todie for a Hannah Swensen'</a>
 <a target="github" href="https://reallylockedin.xyz/embed/6869a775ed88229b81a82ec1?nochat=1&autoplay=1">'Heads Of State 2025'</a>	
+<a target="github" href="https://reallylockedin.xyz/embed/6869acbded88229b81a8f162?nochat=1&autoplay=1">'Jurassic World Rebirth'</a>	
 <a target="github" href="https://reallylockedin.xyz/embed/68680cb2ed88229b817301c0?nochat=1&autoplay=1">'The Final Reckoning'</a>
 </div>
 	</div></center></div>
 <div class="ac">
 <div style="position: relative;padding-bottom: 56.25%; padding-top: 0px; height: 0;"><iframe name="github" style="position: absolute;top: 0;left: 0;width: 100%;height: 100%;" src="https://topembed.pw/channel/NickelodeonTV[USA]" frameborder="0" allowfullscreen="1" allow="autoplay; encrypted-media; picture-in-picture"></iframe></div>
-	<div class="ac"><font size="2" color="#CCCCCC" face="verdana">&nbsp;Play | teleзов <a href="//ok.ru/videoembed/6959664209567?nochat=1" target="_blank" onClick="window.open('//ok.ru/videoembed/6959664209567?nochat=1','playindex','resizable,width=480,height=208'); return false;"><font size="2" color="#ffee10" face="verdana">Live</font>&nbsp;<img src="/telezov_files/tvzov.png" width="12px" height="12px" alt="www.tvzov.com"></a><a target="github" href="/tv/playus.html" title="твPlay"><span style=""> &#x25c0;</span> тvPlay</a></font></div></div>
+	<div class="ac"><font size="2" color="#CCCCCC" face="verdana">&nbsp;Play | teleзов <a href="//ok.ru/videoembed/6959664209567?nochat=1" target="_blank" onClick="window.open('//ok.ru/videoembed/6959664209567?nochat=1','playindex','resizable,width=480,height=208'); return false;"><font size="2" color="#ffee10" face="verdana">Live </font>&nbsp;<img src="/telezov_files/tvzov.png" width="12px" height="12px" alt="www.tvzov.com"></a><a target="github" href="/tv/playus.html" title="твPlay"><span style=""> &#x25c0;</span> тvPlay</a></font></div></div>
 	
 <div id="channels" class="content"><ul><li></li></ul>
 	</div>
