--- a/tv/film.html
+++ b/tv/film.html
@@ -118,6 +118,8 @@ display: block;
 <a target="github" href="https://reallylockedin.xyz/embed/6869a775ed88229b81a82ec1?nochat=1&autoplay=1">'Heads Of State 2025'</a>	
 <a target="github" href="https://reallylockedin.xyz/embed/6869acbded88229b81a8f162?nochat=1&autoplay=1">'Jurassic World Rebirth'</a>	
 <a target="github" href="https://reallylockedin.xyz/embed/68680cb2ed88229b817301c0?nochat=1&autoplay=1">'The Final Reckoning'</a>
+<a target="github" href="https://reallylockedin.xyz/embed/6869b100ed88229b81a990b1?nochat=1&autoplay=1">'F1 The Movie 2025'</a>	
+<a target="github" href="https://reallylockedin.xyz/embed/6869aed2ed88229b81a940e0?nochat=1&autoplay=1">'How To Train Your Dragon'</a>	
 </div>
 	</div></center></div>
 <div class="ac">
